fixed overflow: hidden

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,4 @@
-body {
+* {
   margin: 0;
   overflow: hidden;
 }
@@ -7,7 +7,6 @@ body {
   background: #f0f0f3;
   display: grid;
   grid-template-rows: 20vh 50vh repeat(2, 15vh);
-  grid-template-columns: 100vw;
 }
 
 /* .ellipse {
@@ -45,7 +44,7 @@ body {
 }
 
 .clockNav {
-  position: absolute;
+  position: relative;
   top: 42%;
   left: 50%;
   transform: translate(-50%, -50%);
