--- a/src/Components/InputField/InputField.module.css
+++ b/src/Components/InputField/InputField.module.css
@@ -1,6 +1,7 @@
 .inputField {
   width: 70px;
   align-self: center;
+  justify-self: center;
   margin: 0;
   padding: 0;
 
@@ -12,4 +13,6 @@
 
   background: #f0f0f3;
   color: #aeaec0;
+  border: none;
+  -moz-appearance: spinner-upbutton;
 }
