--- a/src/Components/Pages/Timer/Timer.module.css
+++ b/src/Components/Pages/Timer/Timer.module.css
@@ -1,11 +1,14 @@
+* {
+  overflow: hidden;
+}
+
 .inputFields {
   z-index: 10;
   grid-row-start: 1;
   display: flex;
-  justify-content: space-between;
-  justify-content: space-around;
+  /* justify-content: space-between; */
+  /* justify-content: space-around; */
 }
-
 .startResetButtons {
   z-index: 10;
   grid-row-start: 3;
